# stlaurent_indices_pi

./: .gitignore  CMakeLists.txt  LICENSE  README.md  stlaurent_indices_pi.def  test_reader.cpp
.github/workflows/: build.yml
packaging/: plugin.xml.in
src/: grib_reader.cpp  grib_reader.h  indices_data.h  ocpn_plugin_stubs_win.cpp  overlay_factory.cpp  overlay_factory.h  stlaurent_pi.cpp  stlaurent_pi.h  ui_dialog.cpp  ui_dialog.h
src/icons/: stlaurent_icon.h
tools/: make_icon.py
